[package]
name = "ske-rs"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dlopen = "0.1"
dlopen_derive = "0.1"
tempfile = "3"
linefeed = "0.6"
